platform/src/objects/Audio_Video_Location__c.object
<CustomObject>
    <fields>
        <fullName>Content_Delivery_Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Delivery Platform</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content_Delivery_Platform__c.Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content_Delivery_Platform__c</referenceTo>
        <relationshipLabel>Audio Video Locations</relationshipLabel>
        <relationshipName>Audio_Video_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descriptor__c</fullName>
        <inlineHelpText>The Descriptor field is to provide greater detail concerning the location and/or placement of the Audio Video Location (ex: Behind Teller Line)</inlineHelpText>
        <label>Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Quote_Marketing_Panel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the red quote panel which surrounds the monitor.</description>
        <inlineHelpText>This is to indicate a red quote panel which surrounds the monitor is installed.</inlineHelpText>
        <label>Red Quote Marketing Panel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Area_Type__c</fullName>
        <label>Room Area Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auditorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakroom Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevator Lobby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry/Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Board Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group of Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Lobby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store lobby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teller Wall (1X2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Teller Wall (1X2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teller Wall Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_Name_Number__c</fullName>
        <label>Room Name / Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audio Video Locations</relationshipLabel>
        <relationshipName>Audio_Video_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated_As_Of__c</fullName>
        <label>Updated As Of</label>
        <type>Date</type>
    </fields>
    <label>Audio Video Location</label>
    <nameField>
        <label>Audio AVL NameVideo Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audio Video Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>